--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -89,32 +89,47 @@
          width: 30%;
      }
 
+     .portada-info {
+         width: 80%;
+     }
+
+     .data__presentation h2 {
+         font-size: 3vw;
+     }
+
+     .data__presentation p {
+         font-size: 2vw;
+     }
  }
 
 
  @media (max-width:700px) {
-    .container__header{
-        margin-inline: 0px;
-    }
-    .css-hyum1k-MuiToolbar-root {
-        padding-left: 0 !important; /* Establece el padding izquierdo a 0 cuando la pantalla es menor a 700px */
-      }
-      .css-ancrnh-MuiButtonBase-root-MuiIconButton-root{
-        margin-right: 0 !important;
-      }
-      .navbar__header {
-        width: 80px;
-        height: auto;
-      }
-      
-    .title__navbar {
-        font-size: 4.5vw;
-      }
-      
-      .title__navbar-2 {
-        font-size: 4.5vw;
-      }
-      
+     .container__header {
+         margin-inline: 0px;
+     }
+
+     .css-hyum1k-MuiToolbar-root {
+         padding-left: 0 !important;
+         /* Establece el padding izquierdo a 0 cuando la pantalla es menor a 700px */
+     }
+
+     .css-ancrnh-MuiButtonBase-root-MuiIconButton-root {
+         margin-right: 0 !important;
+     }
+
+     .navbar__header {
+         width: 80px;
+         height: auto;
+     }
+
+     .title__navbar {
+         font-size: 4.5vw;
+     }
+
+     .title__navbar-2 {
+         font-size: 4.5vw;
+     }
+
      .data h2,
      .data h3 {
          font-size: 2.5vw;
@@ -200,25 +215,33 @@
      .ser-parte__p {
          width: 80%;
      }
-     .container-agradecimiento-h1-failed{
-        font-size: 4vw !important;
-      }
 
+     .container-agradecimiento-h1-failed {
+         font-size: 4vw !important;
+     }
+
+     .ser-parte__p {
+
+         font-size: 3vw !important;
+         letter-spacing: 1px;
+     }
  }
 
  @media (max-width: 500px) {
-    .container__payment h1{
-        font-size: 15px;
-      }
-    .button-header{
-        margin-right: 10px;
-        padding: 5px;
-        font-size: 2.5vw;
-    }
-    .navbar__header{
-        width: 20%;
-        height: auto;
-    }
+     .container__payment h1 {
+         font-size: 15px;
+     }
+
+     .button-header {
+         margin-right: 10px;
+         padding: 5px;
+         font-size: 2.5vw;
+     }
+
+     .navbar__header {
+         width: 20%;
+         height: auto;
+     }
 
      .container-lists__redes-list {
          position: initial;
@@ -250,7 +273,7 @@
 
      .container__values {
          width: 100%;
-        margin-top: 0px;
+         margin-top: 0px;
      }
 
      .description__value {
@@ -431,16 +454,19 @@
      .titleEventCarrousel {
          font-size: 4vw !important;
      }
+
      .card-bottom-near {
-       height: 250px;
-      }
-      .info__events p {
-        font-size: 3vw !important;
-        text-align: center;
+         height: 250px;
      }
+
+     .info__events p {
+         font-size: 3vw !important;
+         text-align: center;
+     }
+
      .info__events-p {
-        font-size: 3vw !important;
-        text-align: center;
+         font-size: 3vw !important;
+         text-align: center;
      }
 
      .footer-primary {
@@ -515,4 +541,16 @@
          cursor: pointer;
      }
 
+     .data__presentation h2 {
+         font-size: 5.5vw;
+     }
+
+     .data__presentation p {
+         font-size: 3.5vw;
+     }
+
+     .ser-parte__p {
+         font-size: 4vw !important;
+         letter-spacing: 1px;
+     }
  }
