--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -443,7 +443,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 5%;
-  background-color: #000;
+  background-color: #202020;
 }
 
 .container__nuestro-equipo {
@@ -790,16 +790,18 @@ body {
 
 .events__title p {
   letter-spacing: 1px;
-  font-size: 1.5vw;
+  font-size: 2.5vw;
   margin: 0 auto;
   width: 70%;
   text-align: center;
   font-family: 'Overpass', sans-serif;
-  font-weight: 600;
+  font-weight: lighter;
+  letter-spacing: 2px;
 }
 
 .events__title span {
-  font-weight: 700;
+
+  font-weight: lighter;
   background-image: url(../img/distressed-underline.svg);
   background-repeat: repeat-x;
   background-position: 0 99%;
@@ -1108,52 +1110,72 @@ body {
   margin-top: 100px;
   width: 100%;
   height: auto;
-  font-family: 'Lora', serif;
 }
 
 .acerca_portada {
+  width: 100%;
   height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
-  background: linear-gradient(to top, #838181, #fff);
+  background: #131313;
 
 }
 
 .portada-info {
-  width: 70%;
-  margin-block: 100px;
-  border-radius: 10px;
+  width: 50%;
   height: auto;
+  margin-block: 100px;
+  background-color: #000000 ;
+}
+.info{
+  margin-block: 0px  !important;
+  margin-top: 50px !important;
+}
+.data__presentation {
+  margin: auto;
+  width: 50%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background-color: #313131b0;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.7);
 }
 
-.portada-info__container-img {
-  width: 25%;
+.data__presentation h2 {
+  padding-block: 15px;
+  font-size: 2vw;
+  font-family: 'Overpass', sans-serif;
+  letter-spacing: 1.5px;
+}
+
+.data__presentation p {
+  padding-bottom: 15px;
+  color: #7f868d;
+  text-align: center;
+  font-size: 1.2vw;
+  letter-spacing: 0.5px;
+  font-family: 'Mate', serif;
+}
+
+/* .portada-info__container-img {
+  width: 50%;
+  margin-top: 4px;
   height: auto;
-  border-radius: 5px;
-  margin-right: 5%;
 }
 
 .portada-info__container-img img {
-  width: 100%;
   height: auto;
   border-radius: 8px;
 }
 
 .portada-info-data_pastora {
-  margin-block: 5%;
-  width: 60%;
+  width: 40%;
+  height: auto;
   display: flex;
+  margin-block: 5px;
   flex-direction: column;
-  justify-content: space-between;
-  font-family: "Italiana", sans-serif;
-  font-size: 1.5vw;
+  font-family:'Segoe UI', sans-serif;
+  font-weight: lighter;
 }
 
 .portada-info-data_pastora h2 {
@@ -1162,16 +1184,18 @@ body {
 
 .portada-info-data_pastora p {
   margin-bottom: 10px;
-}
-.portada-info-buttons{
+} */
+.portada-info-buttons {
   display: flex;
 
 }
-.button-portada{
+
+.button-portada {
   margin: 0 !important;
   margin-right: 10px !important;
   color: #fff !important;
 }
+
 #background-video {
   position: relative;
   width: 100%;
@@ -1582,6 +1606,7 @@ body {
   position: relative;
   z-index: 12;
 }
+
 .events__presentation {
   position: absolute;
   width: 80%;
@@ -1614,7 +1639,7 @@ body {
   font-size: 5vw;
   color: #fff;
   font-family: 'Italiana', serif;
-} 
+}
 
 .events__description {
   color: #fff;
@@ -2033,7 +2058,15 @@ body {
 .modal__close:hover {
   color: #60ad26;
 }
-
+.transfer-data{
+  color: #000;
+  width: 90%;
+  font-size: 15px;
+  margin: 0 auto;
+}
+.transfer-data p{
+  margin-top: 10px;
+}
 .participation-box {
   position: absolute;
   top: 52%;
@@ -2172,8 +2205,8 @@ body {
   background-color: #000;
 }
 
-.event-description-time{
-  font-family:sans-serif;
+.event-description-time {
+  font-family: sans-serif;
 }
 
 .container-description {
@@ -2236,8 +2269,9 @@ body {
   font-family: 'Overpass', sans-serif;
   font-weight: 600;
 }
-.timeE{
-  
+
+.timeE {
+
   border-right: 0px solid #656f77 !important;
 }
 
@@ -2431,50 +2465,59 @@ body {
   margin: 0 auto;
 }
 
-.webpay{
+.webpay {
   color: #000;
 }
-.container__payment{
+
+.container__payment {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.container__payment h1{
+
+.container__payment h1 {
   font-family: 'Italiana', sans-serif;
   font-size: 2vw;
 
 }
-.confirmation-webpay{
+
+.confirmation-webpay {
   margin-top: 100px;
   font-size: 50px;
 }
-.buttonWebpay:hover{
-  background-color:#202020 ;
+
+.buttonWebpay:hover {
+  background-color: #202020;
 }
-.container-agradecimiento{
+
+.container-agradecimiento {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.container-img-agradecimiento{
+
+.container-img-agradecimiento {
   margin-top: 20px;
   width: 150px;
   height: auto;
 }
 
 .container-agradecimiento h1 {
-font-family: 'Italiana', sans-serif;
-color: #252423;
-font-size: 5vw;
-margin-bottom: 20px;
+  font-family: 'Italiana', sans-serif;
+  color: #252423;
+  font-size: 5vw;
+  margin-bottom: 20px;
 }
-.container-img-agradecimiento img{
+
+.container-img-agradecimiento img {
   width: 100%;
   height: auto;
 }
-.container-agradecimiento-h1-failed{
+
+.container-agradecimiento-h1-failed {
   font-size: 2.5vw !important;
 }
-.container__payment h1{
-  font-size: 20px ;
+
+.container__payment h1 {
+  font-size: 20px;
 }
