--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1127,12 +1127,14 @@ body {
   width: 50%;
   height: auto;
   margin-block: 100px;
-  background-color: #000000 ;
+  background-color: #000000;
 }
-.info{
-  margin-block: 0px  !important;
+
+.info {
+  margin-block: 0px !important;
   margin-top: 50px !important;
 }
+
 .data__presentation {
   margin: auto;
   width: 50%;
@@ -2032,15 +2034,18 @@ body {
 .modal__close:hover {
   color: #60ad26;
 }
-.transfer-data{
+
+.transfer-data {
   color: #000;
   width: 90%;
   font-size: 15px;
   margin: 0 auto;
 }
-.transfer-data p{
+
+.transfer-data p {
   margin-top: 10px;
 }
+
 .participation-box {
   position: absolute;
   top: 52%;
@@ -2118,7 +2123,7 @@ body {
 
 .method_donation {
   text-align: center;
-	font-size: 20px;
+  font-size: 20px;
   color: #000;
   margin-bottom: 20px;
 }
@@ -2412,7 +2417,7 @@ body {
   width: 90%;
   margin: 0 auto;
   padding-block: 50px;
-  padding-top:105px;
+  padding-top: 105px;
 }
 
 .p__form-participate {
@@ -2499,4 +2504,270 @@ body {
 
 .container__payment h1 {
   font-size: 20px;
+}
+
+/* 
+LOGIN */
+.main_privateLayout {
+  background:
+    linear-gradient(to left, #00314C, #214d2c),
+    linear-gradient(to top, #00314C, #214d2c);
+  background-blend-mode: screen;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.article_login {
+  width: 30%;
+  height: 60%;
+  border: 1px solid #660e0e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 10px;
+  border: 1px solid #afafaf;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.title_login {
+  font-size: 3vw;
+  font-family: Arial, sans-serif;
+  font-weight: 100;
+
+}
+
+.form_login {
+  height: 70%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+}
+
+.input_login {
+  height: 40px;
+  width: 70%;
+  border-radius: 5px;
+  border: none;
+  border-bottom: 2px solid #afafaf;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  padding-left: 5px;
+  outline: none;
+}
+
+.container_password {
+  position: relative;
+  width: 70%;
+}
+
+.pw {
+
+  width: 100% !important;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.iconPassword {
+  position: absolute;
+  top: 0;
+  left: 80%;
+}
+
+.button_login {
+  width: 70%;
+  height: 40px;
+  border-radius: 30px;
+  cursor: pointer;
+  color: #fff;
+  background-color: rgba(3, 5, 14, 0.4);
+  border: none;
+}
+
+/* BIENVENIDA USER */
+.section_bienvenidaUser {
+  background-color: #242424;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, sans-serif;
+}
+.container_robot{
+  display: flex;
+  margin-inline: 50px;
+  height: 50%;
+}
+
+.robot {
+ display: flex;
+}
+
+.ear_robot {
+  width: 20px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #2D234F;
+  
+  background: linear-gradient(to top, #79396c, #2D234F);
+  margin: auto;
+}
+
+.face_robot {
+  border: 1px solid #795c5c;
+  background: linear-gradient(to top, #4e4e4e, #eff5f1);
+  height: 130px;
+  width: 200px;
+  margin: auto;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.container_eyes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.parpado_robot {
+  background-color: #19182D;
+  width: 60px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  padding-top: 15px;
+  justify-content: center;
+  border-radius: 50%;
+}
+.eye_robot-speak{
+  margin-top: -10px;
+}
+
+.eye_robot {
+  background: linear-gradient(to top, #da9ecf, #5b4472);
+  width: 45px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.eye_rigth {
+  margin-right: 40px;
+}
+
+.span_eye {
+  background-color: #000;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+}
+
+.mouth_robot {
+  width: 80px;
+  height: 35px;
+  background-color: #AB164B;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.mouth_robot-speak{
+  width: 50px;
+  height: 40px;
+}
+.teeth_robot-speak{
+  width: 35px !important;
+}
+
+.teeth_robot {
+  background: linear-gradient(to top, #4e4e4e, #eff5f1);
+  width: 75px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  color:#000;
+  align-items: center;
+  justify-content: space-around;
+}
+.h1_teeth{
+  height: 100%;
+}
+
+.h1_robotSay{
+  width: 50%;
+  
+}
+.container__text{
+  margin-top: 100px;
+  width: 70%;
+
+}
+.container__text p{
+  font-size: 20px;
+}
+.container_buttons{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.button_welcome{
+  width: 100%;
+  height: 50px;
+  border-radius: 30px;
+  cursor: pointer;
+  color: #fff;
+  background-color: rgba(3, 5, 14, 0.4);
+  border: none;
+}
+.containerhand{
+  width: 30%;
+}
+.button_animation {
+  transition: transform 0.3s ease-out;
+}
+.button_welcome:hover{
+  background-color: rgba(6, 131, 33, 0.4);
+}
+
+.visible {
+  animation: slideIn 0.3s ease-out forwards; /* Aplicar la animación */
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-10px); /* Desplazamiento inicial hacia arriba */
+    opacity: 0; /* Inicialmente transparente */
+  }
+  100% {
+    transform: translateY(0); /* Desplazamiento hacia abajo */
+    opacity: 1; /* Totalmente visible */
+  }
+}
+.hand-icon {
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.hand-icon.visible {
+  visibility: visible;
+}
+
+.iconDown{
+  width: 40px;
+  height: auto;
 }
